--- a/Übungsaufgaben/kapitel2/notebook_k2.ipynb
+++ b/Übungsaufgaben/kapitel2/notebook_k2.ipynb
@@ -29,6 +29,299 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gefundene Primzahlen: \n",
+      " [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S. 137\n",
+    "\n",
+    "def sieb_des_eratosthenes(n):\n",
+    "    l, p = list(range(2, n)), []\n",
+    "\n",
+    "    while l[0] ** 2 < n:\n",
+    "        p.append(l[0])\n",
+    "        for i in [n for n in l if n % l[0] == 0]:\n",
+    "            l.remove(i)\n",
+    "    p += l\n",
+    "    print(f'Gefundene Primzahlen: \\n {p}')\n",
+    "\n",
+    "sieb_des_eratosthenes(100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# S.138\n",
+    "\n",
+    "def cards():\n",
+    "    farben = ['Karo', 'Herz', 'Pik', 'Kreuz']\n",
+    "    symbole = ['7', '8', '9', 'Bube', 'Dame', 'Koenig', '10', 'Ass']\n",
+    "    return [[i, f] for f in farben for i in symbole]\n",
+    "\n",
+    "print(cards())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hlzeitma\n",
+      "Lloha Hlzeitma \n"
+     ]
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Lisa', 'Sigi'), ('Maria', 'Hans'), ('Anne', 'Leo'), ('Else', 'Tim')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S.138\n",
+    "\n",
+    "def self_zip():\n",
+    "    damen = ['Maria', 'Anne', 'Else', 'Lisa']\n",
+    "    herren = ['Hans', 'Leo', 'Tim', 'Sigi']\n",
+    "    erg_zip = list(zip(damen, herren))\n",
+    "    return [(damen[i - 1], herren[i - 1]) for i in range(0, len(damen))]\n",
+    "\n",
+    "print(self_zip())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 28]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S.138\n",
+    "\n",
+    "def perfect_numbers(n):\n",
+    "    list = [i for i in range(1, n + 1) if\n",
+    "            i == sum([d for d in range(1, n + 1) if (i % d == 0) and (i is not d)])]\n",
+    "    print(list)\n",
+    "\n",
+    "perfect_numbers(1000)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 9*x^1 + 5*x^2 + 8*x^3 - 4*x^4 + 0.5*x^5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S. 143-144\n",
+    "\n",
+    "# a)\n",
+    "\n",
+    "def pretty_print(p):\n",
+    "    output = ''\n",
+    "    for idx, coefficient in enumerate(p):\n",
+    "        if idx == 0:\n",
+    "            output += str(p[0])\n",
+    "        else:\n",
+    "            output += f' {\"-\" if coefficient < 0 else \"+\"} {abs(coefficient)}*x^{idx}'\n",
+    "    print(output)\n",
+    "\n",
+    "pretty_print((10, 9, 5, 8, -4, 1/2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 1*x^1 + 9*x^2 + 6.5*x^3 + 11*x^4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b)\n",
+    "\n",
+    "def add(p1, p2):\n",
+    "    return tuple([sum(element) for element in zip(p1, p2)])\n",
+    "\n",
+    "p1 = (9, 1, 3, 6, 8)\n",
+    "p2 = (-6, 0, 6, 1/2, 3, 5)\n",
+    "\n",
+    "p3 = add(p1, p2)\n",
+    "pretty_print(p3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-54 + 0*x^1 + 18*x^2 + 3.0*x^3 + 24*x^4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# c)\n",
+    "\n",
+    "def mul(p1, p2):\n",
+    "    return tuple([element[0] * element[1] for element in zip(p1, p2)])\n",
+    "\n",
+    "p1 = (9, 1, 3, 6, 8)\n",
+    "p2 = (-6, 0, 6, 1/2, 3, 5)\n",
+    "\n",
+    "p3 = mul(p1, p2)\n",
+    "pretty_print(p3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 + 1*x^1 + 6*x^2 + 18*x^3 + 32*x^4\n",
+      "0 + 0*x^1 + 12*x^2 + 1.5*x^3 + 12*x^4 + 25*x^5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# d)\n",
+    "\n",
+    "def diff(p):\n",
+    "    return tuple([index * number for index, number in enumerate(p)])\n",
+    "\n",
+    "p1 = (9, 1, 3, 6, 8)\n",
+    "p2 = (-6, 0, 6, 1/2, 3, 5)\n",
+    "\n",
+    "p3 = diff(p1)\n",
+    "pretty_print(p3)\n",
+    "\n",
+    "p4 = diff(p2)\n",
+    "pretty_print(p4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 + 9.0*x^1 + 0.5*x^2 + 1.0*x^3 + 1.5*x^4 + 1.6*x^5\n",
+      "-6 - 6.0*x^1 + 0.0*x^2 + 2.0*x^3 + 0.125*x^4 + 0.6*x^5 + 0.8333333333333334*x^6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# e)\n",
+    "\n",
+    "def integrate(p):\n",
+    "    return tuple([p[0]] + [number / (index + 1) for index, number in enumerate(p)])\n",
+    "\n",
+    "p1 = (9, 1, 3, 6, 8)\n",
+    "p2 = (-6, 0, 6, 1/2, 3, 5)\n",
+    "\n",
+    "p3 = integrate(p1)\n",
+    "pretty_print(p3)\n",
+    "\n",
+    "p4 = integrate(p2)\n",
+    "pretty_print(p4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# S. 150\n",
     "\n",
@@ -69,18 +362,7 @@
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hlzeitma\n",
-      "Lloha Hlzeitma \n"
-     ]
-    }
-   ]
+   }
   },
   {
    "cell_type": "code",
@@ -346,6 +628,15 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
