--- a/Übungsaufgaben/Kapitel2/notebook_k2.ipynb
+++ b/Übungsaufgaben/Kapitel2/notebook_k2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -29,7 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -54,16 +59,25 @@
     "    print(f'Gefundene Primzahlen: \\n {p}')\n",
     "\n",
     "sieb_des_eratosthenes(100)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['7', 'Karo'], ['8', 'Karo'], ['9', 'Karo'], ['Bube', 'Karo'], ['Dame', 'Karo'], ['Koenig', 'Karo'], ['10', 'Karo'], ['Ass', 'Karo'], ['7', 'Herz'], ['8', 'Herz'], ['9', 'Herz'], ['Bube', 'Herz'], ['Dame', 'Herz'], ['Koenig', 'Herz'], ['10', 'Herz'], ['Ass', 'Herz'], ['7', 'Pik'], ['8', 'Pik'], ['9', 'Pik'], ['Bube', 'Pik'], ['Dame', 'Pik'], ['Koenig', 'Pik'], ['10', 'Pik'], ['Ass', 'Pik'], ['7', 'Kreuz'], ['8', 'Kreuz'], ['9', 'Kreuz'], ['Bube', 'Kreuz'], ['Dame', 'Kreuz'], ['Koenig', 'Kreuz'], ['10', 'Kreuz'], ['Ass', 'Kreuz']]\n"
+     ]
+    }
+   ],
    "source": [
     "# S.138\n",
     "\n",
@@ -73,28 +87,16 @@
     "    return [[i, f] for f in farben for i in symbole]\n",
     "\n",
     "print(cards())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hlzeitma\n",
-      "Lloha Hlzeitma \n"
-     ]
-    }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -114,17 +116,16 @@
     "    return [(damen[i - 1], herren[i - 1]) for i in range(0, len(damen))]\n",
     "\n",
     "print(self_zip())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -143,17 +144,16 @@
     "    print(list)\n",
     "\n",
     "perfect_numbers(1000)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -178,17 +178,16 @@
     "    print(output)\n",
     "\n",
     "pretty_print((10, 9, 5, 8, -4, 1/2))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -209,17 +208,16 @@
     "\n",
     "p3 = add(p1, p2)\n",
     "pretty_print(p3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -240,17 +238,16 @@
     "\n",
     "p3 = mul(p1, p2)\n",
     "pretty_print(p3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,17 +272,16 @@
     "\n",
     "p4 = diff(p2)\n",
     "pretty_print(p4)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -310,18 +306,26 @@
     "\n",
     "p4 = integrate(p2)\n",
     "pretty_print(p4)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hlzeitma\n",
+      "Lloha Hlzeitma \n"
+     ]
+    }
+   ],
    "source": [
     "# S. 150\n",
     "\n",
@@ -356,17 +360,16 @@
     "line = 'Hallo Mahlzeit'\n",
     "pig_line = from_pig_zeile(line)\n",
     "print(pig_line)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# S. 151\n",
@@ -399,17 +402,16 @@
     "        print(e)\n",
     "\n",
     "to_pig_latin_file()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -442,17 +444,16 @@
     "    return output\n",
     "\n",
     "print(haeufogkeit('Hallo Mahlzeit'))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -487,17 +488,16 @@
     "    print(f'unterschiedliche Wörter: {len(unic_words)}, Wörter total: {all_words}, Quotient: {quotient}')\n",
     "\n",
     "wortschatz()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -563,26 +563,25 @@
     "berechne_summen_ueber_laeden(umsatz_dict)\n",
     "berechne_getraenke_summmen(umsatz_dict)\n",
     "print_umsatz(umsatz_dict)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "set      :  3,  66,  97,\n",
-      "id      :  2,  22,  97,\n",
       "type      :  2,  10,\n",
       "list      :  2,  3,  43,\n",
+      "set      :  3,  66,  97,\n",
+      "id      :  2,  22,  97,\n",
       "\n"
      ]
     }
@@ -622,22 +621,14 @@
     "    print(output)\n",
     "\n",
     "print_index(read_data())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -649,16 +640,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
